--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.20",
+    "@types/react-redux": "^7.1.21",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
