--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todolist-1-new",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://paul-bel.github.io/SocialNetworkPrototype",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,6 +16,7 @@
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -29,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
